@@ -154,8 +154,9 @@ cdnboxStates.init = async function (DNSserverclass, choose) {
   var lconfig = cdnboxStates.config, ips;
   try {
     ips = await getwhoami();
+    if (ips === undefined) { logerror('"error": "Whoami undefined !! '); }
   } catch (err) {
-    logerror('"error": "Whoami failed !! ');
+    logerror('"error": "Whoami failed !! ' + err);
   }
 
   // initialisation cdnboxStates
@@ -428,6 +429,7 @@ function getwhoami() {
           }
         }())
         .on('error', (e) => {
+          console.error('"error": "' + e.toString().replace(/"/g,'') + '"');
           logerror('"error": "' + e.toString().replace(/"/g,'') + '"');
         });
       }
@@ -436,6 +438,7 @@ function getwhoami() {
 }
 
 function testCDNBoxes() {
+  if (cdnboxStates.local.config.name === undefined) { throw "Local CDNBox not detected."; }
   cdnboxStates.penalbucket.get();
   cdnboxStates.config.cdnboxes.forEach(function(cdnbox) { getPerf(cdnbox); });
   // localtests
